# alura-receitas

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alurareceita/: settings.py  urls.py
apps/receitas/: urls.py  views.py
apps/receitas/migrations/: 0001_initial.py  0002_classe.py  0003_receita_pessoa.py
pessoas/: admin.py  urls.py  views.py
pessoas/migrations/: 0001_initial.py
receitas/: admin.py  models.py  urls.py  views.py
receitas/migrations/: 0001_initial.py  0003_receita_pessoa.py  0004_receita_publicada.py  0005_receita_foto_receita.py  0006_alter_receita_pessoa.py  0007_categoria_delete_classe_alter_receita_categoria.py
receitas/templates/: index.html  receita.html
templates/: 404.html  base.html  buscar.html  index.html  receita.html  receita.html:Zone.Identifier
templates/partials/: _busca.html  _footer.html  _menu.html  busca.html  menu.html
templates/receitas/: criar.html  editar.html  receita.html
templates/usuarios/: cadastro.html  cria_receita.html  dashboard.html  editar_receita.html  login.html
usuarios/: urls.py  views.py
