[tool.poetry]
name = "curso-django"
version = "0.1.0"
description = ""
authors = ["Romulo Sousa <carmosousa20@outlook.com>"]
readme = "README.md"
packages = [{include = "curso_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg2-binary = "^2.9.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
